# Innopolis

./: .gitignore
Innopolis/1 semester/Applied statistics and experiments in science and engineering/lectures/: !index.md  7 - Experimental Design - part 2.md  9 - Fundamental Statistics.md
Innopolis/1 semester/HDDA/project/: project.ipynb  project_rec_sys_group8_notebook.ipynb
Innopolis/1 semester/Machine Learning/: Midterm.md  part2.rnote
Innopolis/1 semester/Machine Learning/Lectures/: !index.md  Artificial Neural Networks.md  Decision Trees.md  Introduction to Machine Learning.md
Innopolis/1 semester/Machine Learning/assignment_2/: order_forecasting.ipynb
Innopolis/1 semester/Optimization/: Optimization_final.rnote
Innopolis/1 semester/Research Methodology for Science and Engineering/: Presentation2.odt
Innopolis/1 semester/Research Methodology for Science and Engineering/LR/: LR of LRs.docx  Paper_statistics.odt
Innopolis/1 semester/Research Methodology for Science and Engineering/Papers/: papers_reviews.docx
Innopolis/2 semester/Advanced_Information_Retrieval/: 0-3_Intro_Web_basics.rnote  4_Quality_assessment.rnote
Innopolis/2 semester/Advanced_Machine_Learning/: Generative Adversarial.rnote  RNN.rnote
Innopolis/2 semester/Advanced_Machine_Learning/ml/: pyproject.toml
Innopolis/2 semester/Advanced_Statistics/Labs/: lab1.ipynb
Innopolis/2 semester/Advanced_Statistics/Lectures/: Lecture_2.rnote
Innopolis/2 semester/Big_Data_Technologies_and_Analytic/: IU Hadoop Cluster - Manual page.html
Innopolis/2 semester/Big_Data_Technologies_and_Analytic/Labs/: Week_1_A.A.Luzinsan.docx
Innopolis/2 semester/Reinforcement_Learning_and_Intellectual_Agents/Labs/rl/: pyproject.toml
src/OpenDataScience/: topic_1_assigment.ipynb
(+84 files in other folders)
