[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "pygame>=2.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.5.0",
    "tensorboard>=2.18.0",
]
