[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.20"
dependencies = [
    "ffmpeg>=1.4",
    "gym==0.24",
    "imageio>=2.35.1",
    "imageio-ffmpeg>=0.5.1",
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "numpy>=1.24.4",
    "pickle5>=0.0.12",
    "pygame>=2.6.1",
    "pyglet==1.5.1",
    "pyopengl>=3.1.9",
    "pyvirtualdisplay>=3.0",
    "pyyaml==6.0",
    "tqdm>=4.67.1",
    "xvfbwrapper>=0.2.10",
]
